fix : update database url in file application-local.yaml